--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
+
 <!DOCTYPE html>
 <html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Core Clear Construction - Client Portal</title>
+    <!-- Shim for process.env to prevent deployment crashes -->
+    <script>
+        window.process = {
+            env: {
+                API_KEY: "" // Will be injected by the environment
+            }
+        };
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Sarabun', sans-serif;
-            background-color: #f8fafc;
-            color: #1e293b;
-        }
-        .animate-pulse-orange {
-            animation: pulse-orange 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-        }
-        @keyframes pulse-orange {
-            0%, 100% { opacity: 1; transform: scale(1); }
-            50% { opacity: .7; transform: scale(1.1); }
-        }
-        .custom-shadow {
-            box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05);
-        }
+        body { font-family: 'Sarabun', sans-serif; background-color: #f8fafc; color: #1e293b; margin: 0; padding: 0; overflow-x: hidden; }
         .gold-text {
             background: linear-gradient(45deg, #d4af37, #f9e29c, #b8860b);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-weight: 800;
-            filter: drop-shadow(0 2px 4px rgba(212, 175, 55, 0.5));
+            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+            font-weight: 800; filter: drop-shadow(0 2px 4px rgba(212, 175, 55, 0.4));
         }
-        .scrollbar-hide::-webkit-scrollbar {
-            display: none;
-        }
-        .scrollbar-hide {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
+        .custom-shadow { box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05); }
+        .scrollbar-hide::-webkit-scrollbar { display: none; }
+        .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
+        @keyframes pulse-orange { 0%, 100% { opacity: 1; transform: scale(1); } 50% { opacity: .7; transform: scale(1.05); } }
+        .animate-pulse-orange { animation: pulse-orange 2s infinite; }
+        
+        /* Smooth transitions for content */
+        .page-enter { animation: fadeIn 0.5s ease-out; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        
+        .mask-linear-fade {
+            mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
         }
     </style>
 <script type="importmap">
@@ -45,12 +44,16 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "@google/genai": "https://esm.sh/@google/genai@^0.2.1"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <!-- Babel standalone for on-the-fly TSX compilation if environment doesn't support it -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
 </body>
 </html>
